--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/voger/qxDialog#readme",
   "devDependencies": {
     "eslint": "^7.17.0"
+  },
+  "dependencies": {
+    "@qooxdoo/compiler": "^1.0.0-beta-20210109-1906"
   }
 }
