--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^7.17.0"
   },
   "dependencies": {
-    "@qooxdoo/compiler": "^1.0.0-beta-20210109-1906"
+    "@qooxdoo/compiler": "^1.0.0-beta-20210109-1906",
+    "@qooxdoo/framework": "^6.0.0-beta-20210109-1906"
   }
 }
