--- a/package.json
+++ b/package.json
@@ -20,8 +20,5 @@
   "devDependencies": {
     "eslint": "^7.17.0"
   },
-  "dependencies": {
-    "@qooxdoo/compiler": "^1.0.0-beta-20210115-1240",
-    "@qooxdoo/framework": "^6.0.0-beta-20210109-1906"
-  }
+  "dependencies": {}
 }
