--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/voger/qxDialog#readme",
   "devDependencies": {
-    "eslint": "^7.17.0"
-  },
-  "dependencies": {}
+    "eslint": "^7.17.0",
+    "prettier": "^2.2.1"
+  }
 }
