Create critical dialog

--- a/Manifest.json
+++ b/Manifest.json
@@ -22,7 +22,7 @@
     "translation": "source/translation"
   },
   "requires": {
-    "@qooxdoo/framework": "^7.0.0-beta",
+    "@qooxdoo/framework": "^6.0.0",
     "@qooxdoo/compiler": "^1.0.0"
   }
 }
