--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,6 @@
   "quoteProps": "preserve",
   "trailingComma": "none",
   "bracketSpacing": false,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "printWidth": 150
 }
